add updateUser and work
