# api/swagger/swagger.yaml
@@ -143,7 +143,7 @@ paths:
         type: "integer"
         format: "int32"
       responses:
-        204:
+        200:
           description: "user deleted"
         default:
           description: "unexpected error"
@@ -459,8 +459,8 @@ definitions:
         type: "string"
   updateUser:
     type: "object"
-    required:
-    - "password"
+    # required:
+    # - "password"
     properties:
       first_name:
         type: "string"
@@ -468,8 +468,8 @@ definitions:
         type: "string"
       email:
         type: "string"
-      password:
-        type: "string"
+      # password:
+      #   type: "string"
       weight:
         type: "integer"
         format: "int32"
